# hpx-kokkos

./: CMakeLists.txt  CTestConfig.cmake  README.md
.github/workflows/: linux.yml
.jenkins/cscs/: Jenkinsfile  batch.sh  ctest.cmake  entry.sh  env-clang-cuda.sh  env-gcc-cuda.sh
benchmarks/: CMakeLists.txt  future_overheads.cpp  overheads.cpp  overheads_multi_instance.cpp  stream.cpp
cmake/: HPXKokkosConfig.cmake
include/: kokkos.hpp  kokkos_executors.hpp  kokkos_import.hpp  kokkos_parallel.hpp  kokkos_utils.hpp
include/hpx/: kokkos.hpp
include/hpx/kokkos/: deep_copy.hpp  execution_spaces.hpp  executors.hpp  future.hpp  import.hpp  kokkos_algorithms.hpp  parallel.hpp  policy.hpp  util.hpp  view.hpp
include/hpx/kokkos/detail/: logging.hpp
src/: kokkos_hpx.cpp
src/hpx/: kokkos.hpp
src/hpx/kokkos/: config.hpp  deep_copy.hpp  execution_spaces.cpp  execution_spaces.hpp  executors.hpp  future.hpp  hpx_algorithms.hpp  hpx_algorithms_for_each.hpp  hpx_algorithms_for_loop.hpp  hpx_algorithms_reduce.hpp  instance_helper.hpp  kokkos_algorithms.hpp  make_instance.hpp  policy.hpp  view.hpp
src/hpx/kokkos/detail/: polling_helper.hpp  version.hpp
tests/: CMakeLists.txt  asynchrony.cpp  dummy.cpp  executors.cpp  executors_instance_mode.cpp  kokkos_async_parallel.cpp  linking.cpp  parallel_algorithms.cpp  policy.cpp  test.hpp  view_iterator.cpp
